# inger

./: README.md
Implementations/c/inger-0.3/: acinclude.m4  compiler.kdevprj  configure
Implementations/c/inger-0.3-win/: printint.ih
Implementations/c/inger-0.3/compiler/: codegen.c  codegen.h  defs.h  lexer.c  lvalue.c  lvalue.h  nodenames.c  switchcheck.h  tokennames.c  tree.c  tree.h  typelookup.h
Implementations/c/inger-0.3/compiler/docs/: Makefile.am
Implementations/c/inger-0.3/compiler/docs/book/: Makefile.in  bnf.otx  book.otx  codetemplates.otx  conclusion.otx  error.otx  gentex.pl  grammar.vsd  langspec.otx  langspecintro.otx  lexer.otx  miscsemchecks.otx  operations.otx  parsing.otx  parsing.vsd  preprocessor.otx  syntaxintro.otx  typechecker.otx  vocabulary.tab
Implementations/c/inger-0.3/compiler/docs/en/: index-1.html  index-2.html  index-6.html
Implementations/c/inger-0.3/compiler/samples/: factor.i
docs/book/: Conclusion_bootstrapping.vsd  Makefile.am  Typecheck_decorate_AST.vsd  acknowledgements.otx  preprocessor.vsd  semanalysis.otx  software.otx  symboltable.vsd
docs/en/: Makefile.in  index-3.html  index-5.html
implementations/c/inger-0.3/: AUTHORS  Makefile.am  compiler.lsm
implementations/c/inger-0.3/compiler/: ast.c  errors.c  funcparams.c  funcparams.h  list.c  main.c  nodenames.h  options.c  returncheck.h  typechecking.c  typechecking.h  types.c  utils.c
implementations/c/inger-0.3/compiler/docs/book/: abstract.otx  codegen.otx  codegen.vsd  grammar.otx  lineno.sty  logicparser.otx  symboltable.otx  syndiagrams.otx
implementations/c/inger-0.3/compiler/docs/en/: index.html
implementations/c/inger-0.3/compiler/samples/: elseif.i  globvar.i  printint.ih  program.i
src/inger-0.3/: Makefile.in  configure.in  mkinstalldirs
src/inger-0.3-win/: AUTHORS  README  factor.i  while.i
src/inger-0.3/compiler/: Makefile.am  Makefile.in  ast.h  bnf.b  errors.h  getsymbols.c  getsymbols.h  lexer.l  list.h  options.h  parser.c  preprocessor.c  preprocessor.h  returncheck.c  switchcheck.c  symtab.c  symtab.h  tokennames.h  tokens.h  tokenvalue.c  tokenvalue.h  typenames.c  typenames.h  types.h  utils.h
src/inger-0.3/compiler/docs/: Makefile.in
src/inger-0.3/compiler/docs/book/: bootstrapping.otx  codegenintro.otx  history.otx  inger.sty  intro.otx  lexerappendix.otx  lstlang1.sty  map.vsd  requirements.otx  syntax.vsd
src/inger-0.3/compiler/docs/en/: index-4.html
src/inger-0.3/compiler/samples/: dupcases.i  goto.i  locvar.i  minmax.i  romannumerals.i  while.i  while_break.i
src/inger-0.3/compiler/templates/: header_template
src/inger-0.3/extra/: inger.vim
