####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = inger
inger_SOURCES = switchcheck.c returncheck.c errors.c typenames.c funcparams.c codegen.c lvalue.c typechecking.c tokenvalue.c tree.c types.c preprocessor.c symtab.c nodenames.c list.c getsymbols.c ast.c tokennames.c options.c parser.c lexer.l main.c 
inger_LDADD   = -lfl

SUBDIRS = docs 

EXTRA_DIST = main.c lexer.l parser.c parser.h options.h options.c defs.h tokennames.c tokennames.h ast.c ast.h getsymbols.c getsymbols.h list.c list.h nodenames.c nodenames.h symtab.c symtab.h types.h tokenvalue.h preprocessor.c preprocessor.h types.c tree.c tree.h tokens.h tokenvalue.c typechecking.c typechecking.h typelookup.h lvalue.c lvalue.h codegen.c codegen.h funcparams.c funcparams.h typenames.c typenames.h errors.c errors.h switchcheck.c switchcheck.h returncheck.c returncheck.h

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = inger

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
inger_LDFLAGS = $(all_libraries) 

LDFLAGS=-g
CFLAGS=-g -Wall

                                                                                
